--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-@plugin "daisyui";
+@import "tailwindcss";
+@plugin "daisyui" {
+  themes: all;
+}
